[package]
name = "abacus-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
toml = { version = "0.8.0" }
chrono = { version = "0.4.26" }
csv = { version = "1.2.2" }
clap = { version = "4.4.6", features = ["derive"] }
itertools = { version = "0.12.0" }
