[package]
name = "abacus-rs"
description = "A simplified plain text cli accounting tool."
authors = ["Federico Carles"]
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "LICENCE.md"
documentation = "https://docs.rs/crate/abacus-rs/0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
toml = { version = "0.8.0" }
chrono = { version = "0.4.26" }
csv = { version = "1.2.2" }
clap = { version = "4.4.6", features = ["derive"] }
itertools = { version = "0.12.0" }
